添加map实现